Minor alignment fix in the for creation

--- a/client/app/directives/prevElement/prevElement.html
+++ b/client/app/directives/prevElement/prevElement.html
@@ -47,6 +47,7 @@
           <label ng-bind-html="choice.label" for="{{choice._id}}"></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
         </div>
       </div>
+      <div class="clearfix"></div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
   </div>
@@ -63,7 +64,7 @@
         </div>
         <div class="clearfix"></div>
       </div>
-
+      <div class="clearfix"></div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
   </div>
