Removing the popovers on click

--- a/client/app/directives/prevElement/prevElement.html
+++ b/client/app/directives/prevElement/prevElement.html
@@ -42,7 +42,7 @@
       <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
 
       <div class="inputLabel inline" ng-repeat="choice in field.choices">
-        <div class="pull-left" popover-placement="right" popover="{{choice.help_text}}" popover-trigger="mouseenter">
+        <div class="pull-left">
           <input type="checkBox" ng-model="choice.selected" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section)" required="{{field.required}}"/>
           <label ng-bind-html="choice.label" for="{{choice._id}}"></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
         </div>
@@ -58,7 +58,7 @@
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
       <div class="inputLabel inline" ng-repeat="choice in field.choices" >
-        <div class="pull-left" popover-placement="right" popover="{{choice.help_text}}" popover-trigger="mouseenter">
+        <div class="pull-left">
           <input type="radio" name="{{field._id}}" ng-model="field.response" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section)" required="{{field.required}}" />
           <label ng-bind-html="choice.label" for="{{choice._id}}" ></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
         </div>
