--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
           <script src="app/account/settings/settings.js"></script>
           <script src="app/account/signup/signup.js"></script>
           <script src="app/common/common.js"></script>
+          <script src="app/common/plugins.js"></script>
           <script src="app/controllers/admin/admin.js"></script>
           <script src="app/controllers/attachCertificate/attachCertificate.js"></script>
           <script src="app/controllers/certificate/certificate.js"></script>
