Fixing the tooltips

--- a/client/app/directives/prevElement/prevElement.html
+++ b/client/app/directives/prevElement/prevElement.html
@@ -3,7 +3,7 @@
     <div class="form-group">
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
-    <!--   <strong class="text-muted">&mdash;  [{{field.choice[0].points || 0}} {{field.choice[0].points == 1 ? 'point' : 'points'}}]</strong> -->
+      <!--   <strong class="text-muted">&mdash;  [{{field.choice[0].points || 0}} {{field.choice[0].points == 1 ? 'point' : 'points'}}]</strong> -->
       <input type="text" class="form-control" ng-model="field.response" id="{{field._id}}" required="{{field.required}}">
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
@@ -24,12 +24,14 @@
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
-      <select id="field._id" class="form-control" ng-model="field.response" ng-change="watchResponses(field, section)" required="{{field.required}}">
-        <option value="">– Select one –</option>
-        <option ng-repeat="choice in field.choices" value="{{choice._id}}" ng-selected="choice._id == field.response">
-          {{choice.label}} &mdash; [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]
-        </option>
-      </select>
+      <div class="inputLabel">
+        <select id="field._id" class="form-control" ng-model="field.response" ng-change="watchResponses(field, section)" required="{{field.required}}" pop-placement="right" pop="{{popup_content}}" pop-show="{{field.showing_popup || false}}">
+          <option value="">– Select one –</option>
+          <option ng-repeat="choice in field.choices" value="{{choice._id}}" ng-selected="choice._id == field.response">
+            {{choice.label}} &mdash; [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]
+          </option>
+        </select>
+      </div>
       <small class="help-block" ng-bind-html="field.help_text"></small>
     </div>
   </div>
@@ -57,10 +59,10 @@
       <type-badge></type-badge>
       <abbr title="Required" ng-if="field.required"> *</abbr>
       <strong class="text-muted possible-points">[Points possible - {{field.possible_points}}]</strong>
-      <div class="inputLabel inline" ng-repeat="choice in field.choices" >
+      <div class="inputLabel inline" ng-repeat="choice in field.choices">
         <div class="pull-left" pop-placement="right" pop="{{choice.help_text}}" pop-show="{{field.response === choice._id && field.showing_popup}}">
           <input type="radio" name="{{field._id}}" ng-model="field.response" value="{{choice._id}}" id="{{choice._id}}" ng-change="watchResponses(field, section, choice)" required="{{field.required}}" />
-          <label ng-bind-html="choice.label" for="{{choice._id}}" ></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
+          <label ng-bind-html="choice.label" for="{{choice._id}}"></label> <strong class="text-muted">&mdash;  [{{choice.points}} {{choice.points == 1 ? 'point' : 'points'}}]</strong>
         </div>
         <div class="clearfix"></div>
       </div>
