--- a/client/app/directives/fieldElement/fieldElement.html
+++ b/client/app/directives/fieldElement/fieldElement.html
@@ -34,7 +34,6 @@
           <input type="text" values="option1" focus-on-show class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
-            <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
 
             <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
 
@@ -52,6 +51,12 @@
             <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
         </div>
+
+
+        <div class="addNewChoice">
+          <a href="" class="js_clone_element btn btn-xs btn-primary" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus"></em> Add another choice</a>
+        </div>
+
         <na></na>
         <condition-settings></condition-settings>
       </div>
@@ -68,7 +73,6 @@
           <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
-            <a class="btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
 
             <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
 
@@ -86,6 +90,10 @@
             <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
         </div>
+        <div class="addNewChoice">
+          <a href="" class="js_clone_element btn btn-xs btn-primary" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus"></em> Add another choice</a>
+        </div>
+
         <na></na>
         <condition-settings></condition-settings>
       </div>
@@ -102,7 +110,7 @@
           <input type="text" focus-on-show values="option1" class="form-control" ng-model="choice.label" ng-focus="choice.focus">
           <input type="number" values="0" class="form-control pointsInput" ng-model="choice.points" min='0'>
           <div class="multipleOptionsActions">
-            <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a>
+           <!--  <a href="" class="js_clone_element btn btn-xs btn-info" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus muted"></em> </a> -->
 
             <a href='' class="btn btn-xs btn-warning" href='' ng-click="addHelptext(choice)" tooltip="Add help text" ng-class="{showtip: choice.has_helptext}"> <em class="icon icon-question muted"></em> </a>
 
@@ -114,14 +122,19 @@
               <strong for="" class="badge badge-info"> NA </strong>
             </span>
           </div>
+
           <div class="clearfix"></div>
           <div class="choice-help-text" ng-if="choice.has_helptext">
             <textarea name="" id=""  placeholder="Tell some thing about this option" class="vert form-control" ng-model="choice.help_text"></textarea>
             <br>
             <a href="" style="margin-top: 10px; display: inline-block;" ng-click="removeHelptext(choice)">&times; Remove help text</a>
           </div>
-
         </div>
+
+        <div class="addNewChoice">
+          <a href="" class="js_clone_element btn btn-xs btn-primary" href='' ng-click="addChoice(field)" tooltip="Add another option"> <em class="icon icon-plus"></em> Add another choice</a>
+        </div>
+
         <na></na>
         <condition-settings></condition-settings>
       </div>
