Fixing some issue

--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -183,7 +183,7 @@
                       <select name="" id="" class="form-control" ng-model="field.type">
                         <option value="text">Text</option>
                         <option value="textarea">Pharagraph</option>
-                        <option value="select">Multiple Choice</option>
+                        <option value="select">Dropdown</option>
                         <option value="checkbox">Checkboxes</option>
                         <option value="radiobutton">Radio Buttons</option>
                       </select>
