--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -37,10 +37,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
-          <span class="last-save-text text-muted">
-            <span ng-if='enableFormSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(form.updated)}}" tooltip-position="left">Saved!</span>
-            <span ng-if='!enableFormSaveButton'  tooltip-append-to-body="true"  tooltip="Last Saved on: {{getFormatedDate(form.updated)}}" tooltip-position="left"> Changes must be saved!</span>
-          </span>
+          <last-save button-enabled="enableFormSaveButton" updated="from.updated"></last-save>
           <div class="form-actions pull-right">
             <button ng-disabled="enableFormSaveButton" class="btn btn-success" ng-click="submitForm(form)" ladda="formSaving" data-style="expand-left">Save Form</button>
             &nbsp;&nbsp;&nbsp;
@@ -50,82 +47,7 @@
       </div>
 
         <div ng-if="formSettings.active" class="row g-c-section-content">
-          <div class="col-lg-12 col-sm-12">
-            <h4 class="g-c-section-heading">Form settings / Publishing</h4>
-            <div class="from-settings">
-              <div class="form-group">
-                <label for="formDescription">Describe this form</label>
-                <textarea name="formDescription" id="formDescription" cols="30" rows="3" class="form-control" ng-model="form.description"></textarea>
-              </div>
-              <div class="form-group">
-                <label for="">Form logo</label>
-                <input class="form-control" ng-model="form.logo"></label>
-              </div>
-              <div class="pull-right">
-                <button class="btn btn-info" ng-click="submitForm(form)" ladda="formSaving" data-style="expand-left" tooltip="Save this form!" tooltip-append-to-body="true">Save</button>
-              </div>
-              <div class="clearfix"></div>
-              <br />
-              <br />
-              <div class="panel panel-info">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Certification logic</h3>
-                </div>
-                <div class="panel-body">
-                  <table class="table table-striped table-hover">
-                    <thead>
-                      <tr>
-                        <th>Name</th>
-                        <th>Min</th>
-                        <th>Max</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr ng-repeat="certificate in form.certificates">
-                        <td>{{certificate.name}}</td>
-                        <td>{{certificate.min}}</td>
-                        <td>{{certificate.max}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <button class="btn btn-info" ng-click="attachCertificate()"> + Add/Modify certificate</button>
-                </div>
-              </div>
-              <div class="panel panel-success">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Publishing</h3>
-                </div>
-                <div class="panel-body">
-                  <div class="col-lg-9 col-sm-9">
-                    <div class="form-group">
-                      <label for="">Publish this from</label>
-                      <p class="help-text">Once you publish a form and if there is any response you cannot edit or make changes. Please be certain.</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-3">
-                    <button class="btn btn-success" tooltip-append-to-body="true"  ng-click="publishForm()" tooltip="" ng-if="form.status == 'Unpublished'"><em class="icon icon-thumbs-up"></em> Publish this form</button>
-                    <button class="btn btn-warning btn-sm" tooltip-append-to-body="true"  ng-click="unPublishForm()" tooltip="" ng-if="form.status == 'Published'"><em class="icon icon-thumbs-down"></em> Unpublish this form</button>
-                  </div>
-                </div>
-              </div>
-              <div class="panel panel-danger">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Dange zone</h3>
-                </div>
-                <div class="panel-body">
-                  <div class="col-lg-9 col-sm-9">
-                    <div class="form-group">
-                      <label for="">Delete this from</label>
-                      <p class="help-text">Once you delete a form, there is no going back. Please be certain.</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-3 col-sm-3">
-                    <button class="btn btn-danger btn-sm" tooltip-append-to-body="true"  tooltip="Remove this form! Can't be reverted!"><em class="icon icon-remove"></em> Remove this form</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div ng-include="'app/controllers/create/formsettings.html'"></div>
         </div>
         <tabset class="g-c-section-content">
         <tab ng-repeat="section in form.sections" active="section.active" disabled="section.disabled">
