--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,7 @@
       <script src="bower_components/d3/d3.js"></script>
       <script src="bower_components/nvd3/build/nv.d3.js"></script>
       <script src="bower_components/quill/dist/quill.js"></script>
-      <script src="bower_components/ngquill/src/ng-quill.js"></script>
+      <script src="bower_components/ngquill/src/ng-quill.min.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
