--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -102,13 +102,12 @@
                   <div class="form-group">
                     <label for="" class="col-lg-3 col-sm-3 control-label">Question Type</label>
                     <div class="col-lg-8 col-sm-8">
-                      <select name="" id="" class="form-control" ng-model="field.type">
-                        <option value="text">Text</option>
-                        <option value="textarea">Pharagraph</option>
-                        <option value="select">Dropdown</option>
-                        <option value="checkbox">Checkboxes</option>
-                        <option value="radiobutton">Radio Buttons</option>
-                      </select>
+                      <ui-select  ng-model="field.type" theme="select2" style="width: 220px;">
+                      <ui-select-match placeholder="Fieldtype">{{$select.selected.name}}</ui-select-match>
+                        <ui-select-choices repeat="type.type as type in fieldTypes">
+                          <span class="icon icon-{{type.icon}}"></span> &nbsp;{{type.name}}
+                        </ui-select-choices>
+                        </ui-select>
                     </div>
                   </div>
                   <div class="form-group">
