--- a/client/assets/fonts/icons.html
+++ b/client/assets/fonts/icons.html
@@ -2933,78 +2933,83 @@
 }
 
 
-.icon-wondering:before {
+.icon-wip:before {
 	content:"\f33b";
 }
 
 
-.icon-wondering2:before {
+.icon-wondering:before {
 	content:"\f33c";
 }
 
 
-.icon-wordpress:before {
+.icon-wondering2:before {
 	content:"\f33d";
 }
 
 
-.icon-wordpress2:before {
+.icon-wordpress:before {
 	content:"\f33e";
 }
 
 
-.icon-wrench:before {
+.icon-wordpress2:before {
 	content:"\f33f";
 }
 
 
-.icon-x-altx-alt:before {
+.icon-wrench:before {
 	content:"\f340";
 }
 
 
-.icon-x:before {
+.icon-x-altx-alt:before {
 	content:"\f341";
 }
 
 
-.icon-xing:before {
+.icon-x:before {
 	content:"\f342";
 }
 
 
-.icon-xing2:before {
+.icon-xing:before {
 	content:"\f343";
 }
 
 
-.icon-yahoo:before {
+.icon-xing2:before {
 	content:"\f344";
 }
 
 
-.icon-yelp:before {
+.icon-yahoo:before {
 	content:"\f345";
 }
 
 
-.icon-youtube:before {
+.icon-yelp:before {
 	content:"\f346";
 }
 
 
-.icon-youtube2:before {
+.icon-youtube:before {
 	content:"\f347";
 }
 
 
-.icon-zoomin:before {
+.icon-youtube2:before {
 	content:"\f348";
 }
 
 
-.icon-zoomout:before {
+.icon-zoomin:before {
 	content:"\f349";
+}
+
+
+.icon-zoomout:before {
+	content:"\f34a";
 }
 
 		</style>
@@ -4153,6 +4158,8 @@
 				<div class="icons__item" data-name="wink"><i class="icon icon-wink"></i> icon-wink</div>
 			
 				<div class="icons__item" data-name="wink2"><i class="icon icon-wink2"></i> icon-wink2</div>
+			
+				<div class="icons__item" data-name="wip"><i class="icon icon-wip"></i> icon-wip</div>
 			
 				<div class="icons__item" data-name="wondering"><i class="icon icon-wondering"></i> icon-wondering</div>
 			
