--- a/client/app/controllers/results/results.html
+++ b/client/app/controllers/results/results.html
@@ -25,25 +25,40 @@
         </div>
       </div>
       <div class="col-lg-12 col-sm-12" ng-if="results.length > 0">
-        <table class="table">
+        <table class="table table-striped table-hover">
+        <thead>
           <tr>
             <th>#</th>
-            <th>Organization</th>
-            <th>User</th>
-            <th>Date</th>
+            <th>Submitted by</th>
+            <th>Status</th>
+            <th>Last updated</th>
             <th>Points</th>
             <th>Responses</th>
-            <th>Actions</th>
           </tr>
+          </thead>
+          <tbody>
           <tr ng-repeat="result in results">
             <td> {{$index + 1}} </td>
-            <td> {{result.form.name}} </td>
             <td> {{result.user_info.username}}</td>
+            <td class="table-row-status">
+              <span ng-if="result.status == 'draft'">
+                <em class="icon icon-wip text-warning" tooltip="User is still working on this submission"></em> <span class="text-muted"> Draft</span>
+              </span>
+
+              <span ng-if="result.status == 'submitted'">
+                <em tooltip="Submitted on {{result.updated}}" class="icon icon-check-alt text-success"></em>
+                <span class="text-muted"> Submitted </span>
+              </span>
+
+            </td>
             <td> {{getFormatedDate(result.updated)}}</td>
             <td> {{result.points}}</td>
-            <td> <a ng-href="/results/{{result.form._id}}/{{result._id}}"> View user responses</a></td>
-            <td></td>
+            <td >
+            <a ng-if="result.status != 'draft'" ng-href="/results/{{result.form._id}}/{{result._id}}"> View user responses</a>
+            <span class="text-muted" ng-if="result.status == 'draft'">Submission pending</span>
+            </td>
           </tr>
+          </tbody>
         </table>
       </div>
     </div>
