Adding the auto grow text box for quesiton
This fixes the issue #10

--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,7 @@
       <script src="bower_components/nvd3/build/nv.d3.js"></script>
       <script src="bower_components/quill/dist/quill.js"></script>
       <script src="bower_components/ngquill/src/ng-quill.min.js"></script>
+      <script src="bower_components/angular-elastic/elastic.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
