--- a/client/app/controllers/create/create.html
+++ b/client/app/controllers/create/create.html
@@ -90,13 +90,13 @@
                   <div class="form-group">
                     <label for="" class="col-lg-3 col-sm-3 control-label">Question Title</label>
                     <div class="col-lg-8 col-sm-8">
-                      <input type="text" class="form-control" id="" placeholder="Untitled question" focus-on-show ng-model="field.label">
+                      <textarea msd-elastic class="form-control vert" id="" placeholder="Untitled question" focus-on-show ng-model="field.label"></textarea>
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="" class="col-lg-3 col-sm-3 control-label">Help Text</label>
                     <div class="col-lg-8 col-sm-8">
-                      <input type="text" class="form-control" id="" placeholder="Give some details" ng-model="field.help_text">
+                      <textarea msd-elastic class="form-control vert" id="" placeholder="Give some details" ng-model="field.help_text"></textarea>
                     </div>
                   </div>
                   <div class="form-group">
