--- a/client/app/controllers/results/results.html
+++ b/client/app/controllers/results/results.html
@@ -4,64 +4,89 @@
     <div class="main-content">
 
       <div class="row-fulid oh">
-        <div class="col-lg-12 col-sm-12">
-          <h1 class="main-page-title">Results</h1>
+        <div class="col-lg-7 col-sm-7">
+          <h1 class="main-page-title">Results – <small> {{form.name}}</small>
+          </h1>
+        </div>
+        <div class="col-lg-5 col-sm-5">
+          <ul class="form-results-meta-stats list-unstyled list-inline pull-right">
+            <li>
+              <span class="form-stat">
+                <strong>{{stats.all}}</strong> Total
+              </span>
+            </li>
+            <li>
+              <span class="form-stat">
+                <strong>{{stats.submitted}}</strong> Submissions
+              </span>
+            </li>
+            <li>
+              <span class="form-stat">
+                <strong>{{stats.draft}}</strong> Drafts
+              </span>
+            </li>
+
+          </ul>
         </div>
       </div>
-      <br>
 
-      <div class="row-fluid">
-        <div class="col-lg-12 col-sm-12">
-          <h1 class="main-page-title sub"><span class="text-muted">Form –</span>  This is the from name </h3>
-      </div>
 
       <div class="clearfix"></div>
       <br>
 
       <div class="" ng-if="results.length == 0">
-        <br><br>
+        <br>
+        <br>
         <div class="text-center">
           <img src="assets/images/results-empty.svg" alt="" class="img-responsive" style="margin: 0 auto; max-width: 700px;">
         </div>
       </div>
+
       <div class="col-lg-12 col-sm-12" ng-if="results.length > 0">
-        <table class="table table-striped table-hover">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Submitted by</th>
-            <th>Status</th>
-            <th>Last updated</th>
-            <th>Points</th>
-            <th>Responses</th>
-          </tr>
+
+        <div class="tabled-row-filter">
+          <span class="label label-info selected" ng-class="{selected: !querys.status}" ng-click="querys.status = undefined">All </span>
+          <span class="label label-info" ng-class="{selected: querys.status == 'submitted'}" ng-click="querys.status = 'submitted'">Submitted</span>
+          <span class="label label-info" ng-class="{selected: querys.status == 'draft'}" ng-click="querys.status = 'draft'">Drafts</span>
+        </div>
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Submitted by</th>
+              <th>Status</th>
+              <th>Last updated</th>
+              <th>Points</th>
+              <th>Responses</th>
+            </tr>
           </thead>
           <tbody>
-          <tr ng-repeat="result in results">
-            <td> {{$index + 1}} </td>
-            <td> {{result.user_info.username}}</td>
-            <td class="table-row-status">
-              <span ng-if="result.status == 'draft'">
+            <tr ng-repeat="result in results | filter: query| filter:querys.status:true">
+              <td> {{$index + 1}} </td>
+              <td> {{result.user_info.username}}</td>
+              <td class="table-row-status">
+                <span ng-if="result.status == 'draft'">
                 <em class="icon icon-wip text-warning" tooltip="User is still working on this submission"></em> <span class="text-muted"> Draft</span>
-              </span>
+                </span>
 
-              <span ng-if="result.status == 'submitted'">
+                <span ng-if="result.status == 'submitted'">
                 <em tooltip="Submitted on {{result.updated}}" class="icon icon-check-alt text-success"></em>
                 <span class="text-muted"> Submitted </span>
-              </span>
+                </span>
 
-            </td>
-            <td> {{getFormatedDate(result.updated)}}</td>
-            <td> {{result.points}}</td>
-            <td >
-            <a ng-if="result.status != 'draft'" ng-href="/results/{{result.form._id}}/{{result._id}}"> View user responses</a>
-            <span class="text-muted" ng-if="result.status == 'draft'">Submission pending</span>
-            </td>
-          </tr>
+              </td>
+              <td> {{getFormatedDate(result.updated)}}</td>
+              <td> {{result.points}}</td>
+              <td>
+                <a ng-if="result.status != 'draft'" ng-href="/results/{{result.form._id}}/{{result._id}}"> View user responses</a>
+                <span class="text-muted" ng-if="result.status == 'draft'">Submission pending</span>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
     </div>
-    </div>
   </div>
+</div>
 </div>
