--- a/client/app/controllers/results/results.html
+++ b/client/app/controllers/results/results.html
@@ -8,7 +8,7 @@
           <h1 class="main-page-title">Results – <small> {{form.name}}</small>
           </h1>
         </div>
-        <div class="col-lg-5 col-sm-5">
+        <div class="col-lg-5 col-sm-5" ng-if="results.length > 0">
           <ul class="form-results-meta-stats list-unstyled list-inline pull-right">
             <li>
               <span class="form-stat">
