--- a/client/app/controllers/forms/form-normal.html
+++ b/client/app/controllers/forms/form-normal.html
@@ -33,16 +33,16 @@
             <span class="label label-info" ng-class="{selected: querys.status == 'Unpublished'}" ng-click="querys.status = 'Unpublished'">Drafts</span>
           </div>
           <div class="row-fluid tabled-row-heading">
-            <div class="col-lg-4 col-sm-4"><strong>Certification Name</strong>
+            <div class="col-lg-5 col-sm-5"><strong>Certification Name</strong>
             </div>
-            <div class="col-lg-3 col-sm-3"><strong>Points</strong>
+            <div class="col-lg-2 col-sm-2"><strong>Points</strong>
             </div>
             <div class="col-lg-4 col-sm-4"><strong>Updated</strong>
             </div>
           </div>
           <div class="clearfix"></div>
           <div class="row-fluid tabled-row" ng-repeat="submission in submissions | filter: query| filter:querys.status:true" ng-click="slideInFormDetails(form)">
-            <div class="col-lg-4 col-sm-4">
+            <div class="col-lg-5 col-sm-5">
               <a ng-href="{{getSubmissionLink(submission)}}">{{submission.form.name}}</a>
               <span class="text-info" ng-if="submission.status == 'draft'">
                 <em class="icon icon-wip text-warning" tooltip="Work in progress."tooltip-append-to-body="true"></em>
@@ -51,10 +51,17 @@
                 <em class="icon icon-check-alt text-success" tooltip="Submitted"tooltip-append-to-body="true"></em>
               </span>
             </div>
-            <div class="col-lg-3 col-sm-3">
+            <div class="col-lg-2 col-sm-2">
               {{submission.points}}
             </div>
-            <div class="col-lg-4 col-sm-4">{{getFormatedDate(submission.updated)}}</div>
+            <div class="col-lg-4 col-sm-4">
+              <span class="text-muted">{{getFormatedDate(submission.updated)}}</span>
+              <span ng-if="submission.expires">
+                <br>
+                <strong class="text-muted">Expires at</strong><br>
+                {{getFormatedDate(submission.expires)}}
+              </span>
+            </div>
             <div class="col-lg-1 col-sm-1"><a href='' ng-click="removeResult(submission)" class="btn btn-xs"><em class="icon icon-remove"></em></a></div>
           </div>
         </div>
