Adding the labname

--- a/client/app/controllers/formshow/success.html
+++ b/client/app/controllers/formshow/success.html
@@ -50,7 +50,7 @@
                       <img ng-src="{{certificate.logo}}" alt="">
                     </div>
                     <div class="certificate-content">
-                      The University of Washington Environmental Stewardship and Sustainability Office certifies <span class="certificate-name"> Computer Science & Engineering </span> as a Green Laboratory.
+                      The University of Washington Environmental Stewardship and Sustainability Office certifies <span class="certificate-name"> <input type="text" ng-model="lab_name"> </span> as a Green Laboratory.
                     </div>
                   </div>
                   <div class="certificate-footer">
