--- a/client/app/controllers/forms/form-normal.html
+++ b/client/app/controllers/forms/form-normal.html
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="clearfix"></div>
-          <div class="row-fluid tabled-row" ng-repeat="submission in submissions | filter: query| filter:querys.status:true" ng-click="slideInFormDetails(form)">
+          <div class="row-fluid tabled-row" ng-class="{expired: isExpired(submission.expires)}" ng-repeat="submission in submissions | filter: query| filter:querys.status:true" ng-click="slideInFormDetails(form)">
             <div class="col-lg-5 col-sm-5">
               <a ng-href="{{getSubmissionLink(submission)}}">{{submission.form.name}}</a>
               <span class="text-info" ng-if="submission.status == 'draft'">
