Adding the test cases

--- a/client/app/controllers/forms/form-normal.html
+++ b/client/app/controllers/forms/form-normal.html
@@ -62,7 +62,7 @@
               {{submission.points}}
             </div>
             <div class="col-lg-4 col-sm-4">
-              <span class="text-muted">{{getFormatedDate(submission.updated)}}</span>
+              <small><span class="text-muted">{{getFormatedDate(submission.updated)}}</span></small>
               <span ng-if="submission.expires">
                 <br>
                 <strong class="text-muted">Expires at</strong><br>
